Fix card rotation on mobile

--- a/components/card.module.css
+++ b/components/card.module.css
@@ -14,7 +14,7 @@
   overflow: hidden;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1025px) {
   .card3d {
     width: 500px;
     height: 700px;
